--- a/_pages/2.research.md
+++ b/_pages/2.research.md
@@ -2,7 +2,7 @@
 layout: page
 permalink: /research/
 title: Research
-description: Explore our ongoing projects and research interests
+description: Explore our methodology-based research categories and ongoing projects 
 nav: true
 nav_order: 1
 ---
