--- a/_pages/5.professor.md
+++ b/_pages/5.professor.md
@@ -1,7 +1,7 @@
 ---
 layout: page
-permalink: /people/professor/
-title: Professor
+permalink: /professor/
+title: PI
 description: Principal investigator
 years: [2024, 2023, 2022, 2021, 2020, 2019, 2017, 2016]
 nav: false
@@ -53,15 +53,13 @@ nav: false
 -----------------
 ## Publication
 
+
 <!-- Publications -->
 <div class="publications">
 
 {% for y in page.years %}
-
-  <h2 class="year">{{ y }}</h2>
-
+  <h2 class="year" style="color: var(--global-theme-color); font-size: 1.2rem; margin-bottom: 0.8rem;">{{ y }}</h2>
   {% bibliography -f papers -q @*[year={{y}}] %}
-
 {% endfor %}
 
 </div>
