--- a/_pages/5.professor.md
+++ b/_pages/5.professor.md
@@ -4,7 +4,8 @@ permalink: /professor/
 title: PI
 description: Principal investigator
 years: [2024, 2023, 2022, 2021, 2020, 2019, 2017, 2016]
-nav: false
+nav: true
+nav_order: 4
 ---
 
 
