--- a/_pages/6.members.md
+++ b/_pages/6.members.md
@@ -6,23 +6,33 @@ nav: true
 nav_order: 5
 ---
 
+
 ##### Current
 
 <div class="row">
 {% for student in site.data.team_members.phd_students %}
   <div class="col-sm-6 col-md-3" style="margin-bottom: 2rem;">
-    {% if student.photo %}
-    <img src="{{ '/assets/img/team/' | append: student.photo | relative_url }}" class="img-fluid rounded" alt="{{ student.name }}">
-    {% endif %}
-    <h5 style="margin-top: 0.8rem; font-size: 1rem;">{{ student.name }}</h5>
-    <p style="font-size: 0.85rem;">
-    <strong>{{ student.position }}</strong><br>
-    {{ student.year }}<br>
-    <em>{{ student.research }}</em>
-    </p>
-    {% if student.email %}
-    <p style="font-size: 0.85rem;"><a href="mailto:{{ student.email }}"><i class="fas fa-envelope"></i> Email</a></p>
-    {% endif %}
+    <div style="display: flex; flex-direction: column; height: 100%;">
+      {% if student.photo %}
+      <img src="{{ '/assets/img/team/' | append: student.photo | relative_url }}" class="img-fluid rounded" alt="{{ student.name }}">
+      {% endif %}
+      <h5 style="margin-top: 0.8rem; font-size: 1rem;">{{ student.name }}</h5>
+      <div style="flex-grow: 1;">
+        <p style="font-size: 0.85rem;">
+        <strong>{{ student.position }}</strong><br>
+        {{ student.year }}<br>
+        <em>{{ student.research }}</em>
+        </p>
+      </div>
+      <p style="font-size: 0.85rem; display: flex; flex-direction: column; gap: 0.3rem; margin-top: 1rem; margin-bottom: 0;">
+      {% if student.email %}
+      <a href="mailto:{{ student.email }}"><i class="fas fa-envelope"></i> Email</a>
+      {% endif %}
+      {% if student.google_scholar %}
+      <a href="{{ student.google_scholar }}" target="_blank"><i class="ai ai-google-scholar"></i> Google Scholar</a>
+      {% endif %}
+      </p>
+    </div>
   </div>
 {% endfor %}
 </div>
@@ -34,24 +44,32 @@ nav_order: 5
 <div class="row">
 {% for student in site.data.team_members.masters_students %}
   <div class="col-sm-6 col-md-3" style="margin-bottom: 2rem;">
-    {% if student.photo %}
-    <img src="{{ '/assets/img/team/' | append: student.photo | relative_url }}" class="img-fluid rounded" alt="{{ student.name }}">
-    {% endif %}
-    <h5 style="margin-top: 0.8rem; font-size: 1rem;">{{ student.name }}</h5>
-    <p style="font-size: 0.85rem;">
-    <strong>{{ student.position }}</strong><br>
-    {{ student.year }}<br>
-    <em>{{ student.research }}</em>
-    </p>
-    {% if student.email %}
-    <p style="font-size: 0.85rem;"><a href="mailto:{{ student.email }}"><i class="fas fa-envelope"></i> Email</a></p>
-    {% endif %}
+    <div style="display: flex; flex-direction: column; height: 100%;">
+      {% if student.photo %}
+      <img src="{{ '/assets/img/team/' | append: student.photo | relative_url }}" class="img-fluid rounded" alt="{{ student.name }}">
+      {% endif %}
+      <h5 style="margin-top: 0.8rem; font-size: 1rem;">{{ student.name }}</h5>
+      <div style="flex-grow: 1;">
+        <p style="font-size: 0.85rem;">
+        <strong>{{ student.position }}</strong><br>
+        {{ student.year }}<br>
+        <em>{{ student.research }}</em>
+        </p>
+      </div>
+      <p style="font-size: 0.85rem; display: flex; flex-direction: column; gap: 0.3rem; margin-top: 1rem; margin-bottom: 0;">
+      {% if student.email %}
+      <a href="mailto:{{ student.email }}"><i class="fas fa-envelope"></i> Email</a>
+      {% endif %}
+      {% if student.google_scholar %}
+      <a href="{{ student.google_scholar }}" target="_blank"><i class="ai ai-google-scholar"></i> Google Scholar</a>
+      {% endif %}
+      </p>
+    </div>
   </div>
 {% endfor %}
 </div>
 
 ---
-
 
 
 <div class="text-center" style="margin-top: 3rem; padding: 2rem; background-color: white; border-radius: 8px;">
