--- a/_pages/5.professor.md
+++ b/_pages/5.professor.md
@@ -16,7 +16,7 @@ nav_order: 4
     <img src="{{ '/assets/img/team/' | append: member.photo | relative_url }}" class="img-fluid rounded" alt="{{ member.name }}">
     {% endif %}
   </div>
-  <div class="col-sm-9">
+  <div class="col-sm-9" style="display: flex; flex-direction: column;">
     <h4>{{ member.name }}</h4>
     <div><strong>{{ member.position }}</strong><br>
     {% if member.affiliation %}
@@ -26,13 +26,15 @@ nav_order: 4
     {% endif %}
     </div>
 
-    {% if member.bio %}
-    <p>{{ member.bio }}</p>
-    {% endif %}
+    <div style="flex-grow: 1;">
+      {% if member.bio %}
+      <p>{{ member.bio }}</p>
+      {% endif %}
+    </div>
 
-    <p>
+    <p style="display: flex; gap: 1rem; margin-bottom: 0;">
     {% if member.email %}
-    <a href="mailto:{{ member.email }}"><i class="fas fa-envelope"></i> Email</a> &nbsp;
+    <a href="mailto:{{ member.email }}"><i class="fas fa-envelope"></i> Email</a>
     {% endif %}
     {% if member.google_scholar %}
     <a href="{{ member.google_scholar }}" target="_blank"><i class="ai ai-google-scholar"></i> Google Scholar</a>
