--- a/_pages/3.publications.md
+++ b/_pages/3.publications.md
@@ -4,7 +4,7 @@ permalink: /publications/
 title: Publications
 description: Research publications and contributions
 years: [2025, 2024, 2023, 2022, 2021, 2020, 2019, 2017, 2016]
-nav: ture
+nav: false
 nav_order: 2
 ---
 
