--- a/_pages/5.professor.md
+++ b/_pages/5.professor.md
@@ -54,8 +54,16 @@ nav_order: 3
 </div>
 
 -----------------
-## Publication
 
+<style>
+.publications ol.bibliography {
+  list-style: none;
+  padding-left: 0;
+}
+</style>
+
+
+## Publication
 
 <!-- Publications -->
 <div class="publications">
@@ -66,3 +74,4 @@ nav_order: 3
 {% endfor %}
 
 </div>
+
