--- a/_pages/5.professor.md
+++ b/_pages/5.professor.md
@@ -5,7 +5,7 @@ title: PI
 description: Principal investigator
 years: [2024, 2023, 2022, 2021, 2020, 2019, 2017, 2016]
 nav: true
-nav_order: 3
+nav_order: 4
 ---
 
 
@@ -55,23 +55,6 @@ nav_order: 3
 
 -----------------
 
-<style>
-.publications ol.bibliography {
-  list-style: none;
-  padding-left: 0;
-}
-</style>
-
-
-## Publication
-
-<!-- Publications -->
-<div class="publications">
-
-{% for y in page.years %}
-  <h2 class="year" style="color: var(--global-theme-color); font-size: 1.2rem; margin-bottom: 0.8rem;">{{ y }}</h2>
-  {% bibliography -f papers -q @*[year={{y}}] %}
-{% endfor %}
-
-</div>
-
+## Professional Activities
+<!-- Professional Activities  -->
+-----------------
