--- a/_pages/5.professor.md
+++ b/_pages/5.professor.md
@@ -58,3 +58,8 @@ nav_order: 4
 ## Professional Activities
 <!-- Professional Activities  -->
 -----------------
+
+
+## Publications
+
+-----------------
